--- a/BR-MS/CheckMessage.html
+++ b/BR-MS/CheckMessage.html
@@ -20,7 +20,7 @@
     <el-form>
         <el-form id="search" :inline="true" ref="queryParams" label-position="right" label-with="80px"
                  :model="queryParams"
-                 v-loading.fullscreen="initializing" element-loading-text="正在获取数据"
+                 v-loading.fullscreen="initializing" element-loading-text="加载中"
                  element-loading-background="rgba(0,0,0,0.8)">
             <el-form-item label="消息类型">
                 <el-select v-model="queryParams.type">
