--- a/BR-MS/EditProfile.html
+++ b/BR-MS/EditProfile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ElementUI + Vue 模板</title>
+    <title>个人信息修改</title>
     <!--随时参考 element文档 http://element-cn.eleme.io/#/zh-CN/component/installation-->
     <link rel="stylesheet" href="lib/eleme-index.css">
     <style>
@@ -22,7 +22,8 @@
 
 <div id="app" v-cloak>
     <div v-if="!editing">
-        <el-row>
+        <el-row v-loading.fullscreen="initializing" element-loading-text="加载中"
+                element-loading-background="rgba(0,0,0,0.8)">
             <el-col :span="20" :offset="2">
                 <el-table :data="tableData" :model="tableData">
                     <el-table-column>
@@ -33,7 +34,7 @@
                             <p><span class="keys">固定电话</span><span>{{props.row.tel}}</span></p>
                             <p><span class="keys">电子邮箱</span><span>{{props.row.email}}</span></p>
                             <p><span class="keys">联系地址</span><span>{{props.row.address}}</span></p>
-                            <p><span class="keys">仓库ID</span><span>{{props.row.warehouseId}}</span></p>
+                            <p><span class="keys">仓库ID</span><span>{{props.row.warehouseId?props.row.warehouseId:'无'}}</span></p>
                         </template>
                     </el-table-column>
                 </el-table>
@@ -82,9 +83,17 @@
     function getData() {
         clearData();
         post('/common/get_my_info', {}, (data, err) => {
-            if (err) {
-                app.$message.error(err.msg);
+            app.initializing=true;
+            if(err){
+                if(err.id!==5000){
+                    app.$message.error(err.msg);
+                }else{
+                    app.$message.error('数据拉取失败');
+                }
+                app.initializing = false;
+                return;
             }
+            app.initializing = false;
             items.push(data[0]);
         })
     }
@@ -101,6 +110,7 @@
         el: '#app',
         data: function () {
             return {
+                initializing:true,
                 editing:false,
                 tableData:items,
                 editedForm: {
@@ -119,8 +129,14 @@
         methods: {
             submit: function () {
                 post('/common/update_my_info', app.tableData[0], (data, err) => {
-                    if (err) {
-                        app.$message.error(err.msg);
+                    app.initializing=true;
+                    if(err){
+                        if(err.id!==5000){
+                            app.$message.error(err.msg);
+                        }else{
+                            app.$message.error('修改失败');
+                        }
+                        app.initializing = false;
                         return;
                     }
                     getData();
