--- a/BR-MS/NewPassword.html
+++ b/BR-MS/NewPassword.html
@@ -92,12 +92,14 @@
                             oldPassword:app.ruleForm2.oldPass,
                             newPassword:app.ruleForm2.checkPass
                         },(data,err)=>{
-                            if(err.msg==='密码错误'){
-                                app.$message.error('旧密码错误');
-                                return;
-                            }else if(err){
-                                app.$message.error(err.msg);
-                                return;
+                            if(err){
+                                if(err.msg==='密码错误'){
+                                    app.$message.error('旧密码错误');
+                                    return;
+                                }else{
+                                    app.$message.error(err.msg);
+                                    return;
+                                }
                             }
                             this.$refs[formName].resetFields();
                             app.$message({
