--- a/BR-MS/CheckMessage.html
+++ b/BR-MS/CheckMessage.html
@@ -8,7 +8,6 @@
         #search .el-input {
             width: 140px;
         }
-
         [v-cloak]{
             display: none;
         }
@@ -20,7 +19,7 @@
     <el-form>
         <el-form id="search" :inline="true" ref="queryParams" label-position="right" label-with="80px"
                  :model="queryParams"
-                 v-loading.fullscreen="initializing" element-loading-text="加载中"
+                 v-loading.fullscreen="initializing" element-loading-text="正在获取数据"
                  element-loading-background="rgba(0,0,0,0.8)">
             <el-form-item label="消息类型">
                 <el-select v-model="queryParams.type">
@@ -152,7 +151,6 @@
 <script src="res/dependencies.js"></script>
 <script>
     var pageNum = 1, pageSize = 6, maxPage = 0;
-
     function getData(page, searchKey, unchanged) {
         clearData(unchanged);
         var common = {};
@@ -183,15 +181,6 @@
             pageSize: pageSize,
             pageNum: page, ...common
         }, (data, err) => {
-            if(err){
-                if(err.id!==5000){
-                    app.$message.error(err.msg);
-                }else{
-                    app.$message.error('数据拉取失败');
-                }
-                app.initializing = false;
-                return;
-            }
             app.pageNum = page;
             app.initializing = false;
             console.log(data,err);
@@ -223,7 +212,6 @@
             }
         });
     }
-
     function totalCompute(searchKey) {
         if (searchKey) {
             var needed = {
@@ -243,28 +231,10 @@
             common1['isRead'] = 1;
             common2['isRead'] = 1;
         }
-        post('/common/getms', searchKey ? {...needed, ...common1} : common1, (data,err) => {
-            if(err){
-                if(err.id!==5000){
-                    app.$message.error(err.msg);
-                }else{
-                    app.$message.error('数据拉取失败');
-                }
-                app.initializing = false;
-                return;
-            }
+        post('/common/getms', searchKey ? {...needed, ...common1} : common1, (data) => {
             maxPage = data.allPages;
             common2['pageNum'] = maxPage;
-            post('/common/getms', searchKey ? {...needed, ...common2} : common2, (data,err) => {
-                if(err){
-                    if(err.id!==5000){
-                        app.$message.error(err.msg);
-                    }else{
-                        app.$message.error('数据拉取失败');
-                    }
-                    app.initializing = false;
-                    return;
-                }
+            post('/common/getms', searchKey ? {...needed, ...common2} : common2, (data) => {
                 var arr = [], msg = data.SysMessage;
                 if(app.checked===4){
                     for (var key in msg) {
@@ -283,7 +253,6 @@
             });
         });
     }
-
     function clearData(unchanged) {
         for (let i = 0; i < pageSize; i++) {
             items.pop();
@@ -297,15 +266,12 @@
             }
         }
     }
-
     function clearForm() {
         for (var i in app.formInput1) {
             app.formInput1[i] = "";
         }
     }
-
     function pageControl(control, searchKey) {
-
         if (control === 'previous') {
             if (pageNum <= 1) {
                 return;
@@ -328,7 +294,6 @@
             getData.call(app, pageNum, searchKey);
         }
     }
-
     var delList = [];
     var read = [null, null, 0, 1];
     var items = [];
@@ -423,11 +388,7 @@
                         isDel: 0
                     }, (data, err) => {
                         if (err) {
-                            if(err.id!==5000){
-                                app.$message.error(err.msg);
-                            }else{
-                                app.$message.error('删除失败');
-                            }
+                            app.$message.error(err.msg);
                             app.initializing = false;
                             return;
                         }
@@ -467,11 +428,7 @@
                                 msg_Id: idToDel[e]
                             }, (data, err) => {
                                 if (err) {
-                                    if(err.id!==5000){
-                                        app.$message.error(err.msg);
-                                    }else{
-                                        app.$message.error('删除失败');
-                                    }
+                                    app.$message.error(err.msg);
                                     app.initializing = false;
                                     return;
                                 }
@@ -506,14 +463,11 @@
                     recipient: app.formInput1.recipient
                 }, (data, err) => {
                     app.initializing = false;
-                    console.log(err)
-                    if(err){
-                        if (err.id!==5000) {
-                            app.$message.error(err.msg);
-                        }else{
-                            app.$message.error('消息发送失败,请检查消息格式');
-                        }
+                    if (err) {
+                        app.$message.error(err.msg);
                         app.initializing = false;
+                        if (err.id === post.NOT_LOGIN) {
+                        }
                         return;
                     }
                     this.$message({
@@ -534,10 +488,9 @@
                         isDel: 0
                     }, (data, err) => {
                         if (err) {
-                            if(err.id!==5000){
-                                app.$message.error(err.msg);
-                            }else{
-                                app.$message.error('标记失败');
+                            app.$message.error(err.msg);
+                            app.initializing = false;
+                            if (err.id === post.NOT_LOGIN) {
                             }
                             app.initializing = false;
                             return;
