--- a/BR-MS/PendingItems.html
+++ b/BR-MS/PendingItems.html
@@ -24,102 +24,113 @@
 </head>
 <body>
 <div id="app" v-cloak>
-    <el-table
-        :data="items"
-        v-loading.fullscreen="states.initializing" element-loading-text="正在获取数据">
+    <el-card>
+        <el-form :inline="true" :model="selection">
+            <el-form-item label="申请单号：" prop="applicationNum" size="mini"><el-input v-model="selection.applicationNum"></el-input></el-form-item>
+            <el-form-item label="开始时间：" prop="start_time" size="mini"><el-input v-model="selection.start_time"></el-input></el-form-item>
+            <el-form-item label="结束时间：" prop="end_time" size="mini"><el-input v-model="selection.end_time"></el-input></el-form-item>
+            <el-form-item size="mini"><el-button style="background-color: #ececec">查询</el-button></el-form-item>
+        </el-form>
+    </el-card>
+    <el-card>
+        <el-table
+            :data="items"
+            v-loading.fullscreen="states.initializing" element-loading-text="正在获取数据">
         <el-table-column
-            prop="userRealName" label="申请人" width="100px"></el-table-column>
+                prop="userRealName" label="申请人" width="100px"></el-table-column>
         <el-table-column
-            prop="createTime" label="申请时间" width="200px"></el-table-column>
+                prop="createTime" label="申请时间" width="200px"></el-table-column>
         <el-table-column
-            prop="goodsName" label="货物名"></el-table-column>
+                prop="goodsName" label="货物名"></el-table-column>
         <el-table-column
-            label="操作" width="320px">
+                label="操作" width="320px">
             <template slot-scope="scope">
                 <span class="no-wrap">
                     <el-button
-                        type="primary" plain size="mini"
-                        @click="showApplySheet(scope.$index)">查看详细信息</el-button>
+                            type="primary" plain size="mini"
+                            @click="showApplySheet(scope.$index)">查看详细信息</el-button>
                     <el-button
-                        type="success" plain size="mini"
-                        @click="showAllowNum(scope.$index)"
-                        :loading="states.buttonLoad.allow">审核通过</el-button>
+                            type="success" plain size="mini"
+                            @click="showAllowNum(scope.$index)"
+                            :loading="states.buttonLoad.allow">审核通过</el-button>
                     <el-button type="danger" plain size="mini">驳回申请</el-button>
                 </span>
             </template>
         </el-table-column>
         <el-table-column
-            prop="JianyiCelue" label="建议策略" width="200px">
+                prop="JianyiCelue" label="建议策略" width="200px">
         </el-table-column>
     </el-table>
-    <el-dialog
-        :visible.sync="dialogs.allowNum"
-        title="审核通过确认" width="35%" class="items-shorter">
-        <el-form
-            v-if="states.dataReady" label-position="left" :model="allowForm"
-            label-width="120px" ref="allowApplyForm" :rules="rules.allowNum">
-            <el-form-item label="申请人">
-                {{ currentRow.userRealName }}
-            </el-form-item>
-            <el-form-item label="物品名">
-                {{ currentRow.goodsName }}
-            </el-form-item>
-            <el-form-item label="物资总数">
-                {{ currRowData.maxAmount }}
-            </el-form-item>
-            <el-form-item label="允许调配数量" prop="permitAmount">
-                <el-input
-                    v-model="allowForm.permitAmount"></el-input>
-            </el-form-item>
-        </el-form>
-        <template slot="footer">
-            <el-button
-                type="primary" @click="handleAllow">审核通过
-            </el-button>
-            <el-button @click="dialogs.allowNum=false">返回</el-button>
-        </template>
-    </el-dialog>
-    <el-dialog
-        :visible.sync="dialogs.applySheet"
-        title="详细信息">
-        <el-form
-            v-if="states.dataReady" class="items-shorter"
-            label-width="120px" label-position="left">
-            <el-form-item label="申请人">
-                {{ currentRow.userRealName }}
-            </el-form-item>
-            <el-form-item label="申请人部门">
-                {{ currentRow.companyName }}
-            </el-form-item>
-            <el-form-item label="货物名">
-                {{ currentRow.goodsName }}
-            </el-form-item>
-            <el-form-item label="货物ID">
-                {{ currentRow.goodsId }}
-            </el-form-item>
-            <el-form-item label="发货仓库">
-                {{ currentRow.startWarehouseName }}
-            </el-form-item>
-            <el-form-item label="目的仓库">
-                {{ currentRow.endWarehouseName }}
-            </el-form-item>
-            <el-form-item label="申请数量">
-                {{ currentRow.amount }}
-            </el-form-item>
-            <el-form-item label="申请描述">
-                {{ currentRow.description }}
-            </el-form-item>
-            <el-form-item label="申请创建时间">
-                {{ currRowCalc.createTime }}
-            </el-form-item>
-            <el-form-item label="目的地址">
-                {{ currRowCalc.end }}
-            </el-form-item>
-        </el-form>
-        <template slot="footer">
-            <el-button type="primary" @click="dialogs.applySheet=false">确定</el-button>
-        </template>
-    </el-dialog>
+        <el-dialog
+                :visible.sync="dialogs.allowNum"
+                title="审核通过确认" width="35%" class="items-shorter">
+            <el-form
+                    v-if="states.dataReady" label-position="left" :model="allowForm"
+                    label-width="120px" ref="allowApplyForm" :rules="rules.allowNum">
+                <el-form-item label="申请人">
+                    {{ currentRow.userRealName }}
+                </el-form-item>
+                <el-form-item label="物品名">
+                    {{ currentRow.goodsName }}
+                </el-form-item>
+                <el-form-item label="物资总数">
+                    {{ currRowData.maxAmount }}
+                </el-form-item>
+                <el-form-item label="允许调配数量" prop="permitAmount">
+                    <el-input
+                            v-model="allowForm.permitAmount"></el-input>
+                </el-form-item>
+            </el-form>
+            <template slot="footer">
+                <el-button
+                        type="primary" @click="handleAllow">审核通过
+                </el-button>
+                <el-button @click="dialogs.allowNum=false">返回</el-button>
+            </template>
+        </el-dialog>
+        <el-dialog
+                :visible.sync="dialogs.applySheet"
+                title="详细信息">
+            <el-form
+                    v-if="states.dataReady" class="items-shorter"
+                    label-width="120px" label-position="left">
+                <el-form-item label="申请人">
+                    {{ currentRow.userRealName }}
+                </el-form-item>
+                <el-form-item label="申请人部门">
+                    {{ currentRow.companyName }}
+                </el-form-item>
+                <el-form-item label="货物名">
+                    {{ currentRow.goodsName }}
+                </el-form-item>
+                <el-form-item label="货物ID">
+                    {{ currentRow.goodsId }}
+                </el-form-item>
+                <el-form-item label="发货仓库">
+                    {{ currentRow.startWarehouseName }}
+                </el-form-item>
+                <el-form-item label="目的仓库">
+                    {{ currentRow.endWarehouseName }}
+                </el-form-item>
+                <el-form-item label="申请数量">
+                    {{ currentRow.amount }}
+                </el-form-item>
+                <el-form-item label="申请描述">
+                    {{ currentRow.description }}
+                </el-form-item>
+                <el-form-item label="申请创建时间">
+                    {{ currRowCalc.createTime }}
+                </el-form-item>
+                <el-form-item label="目的地址">
+                    {{ currRowCalc.end }}
+                </el-form-item>
+            </el-form>
+            <template slot="footer">
+                <el-button type="primary" @click="dialogs.applySheet=false">确定</el-button>
+            </template>
+        </el-dialog>
+    </el-card>
+
 </div>
 </body>
 <script src="lib/vue.js"></script>
@@ -148,6 +159,11 @@
     var app = new Vue({
         el: '#app',
         data: {
+            selection:{
+                applicationNum:'',
+                start_time:'',
+                end_time:''
+            },
             dialogs: {
                 allowNum: false,
                 applySheet: false
