--- a/BR-MS/PendingItems.html
+++ b/BR-MS/PendingItems.html
@@ -24,7 +24,6 @@
 </head>
 <body>
 <div id="app" v-cloak>
-<<<<<<< HEAD
     <el-card>
         <el-form :inline="true" :model="selection">
             <el-form-item label="申请单号：" prop="applicationNum" size="mini"><el-input v-model="selection.applicationNum"></el-input></el-form-item>
@@ -37,11 +36,6 @@
         <el-table
             :data="items"
             v-loading.fullscreen="states.initializing" element-loading-text="正在获取数据">
-=======
-    <el-table
-        :data="items" v-loading.fullscreen="states.initializing" element-loading-text="加载中"
-        element-loading-background="rgba(0,0,0,0.8)" element-loading-text="正在获取数据">
->>>>>>> df544c9255fdebc83c6cbf52b1d2abce7ab391a8
         <el-table-column
                 prop="userRealName" label="申请人" width="100px"></el-table-column>
         <el-table-column
@@ -135,6 +129,8 @@
                 <el-button type="primary" @click="dialogs.applySheet=false">确定</el-button>
             </template>
         </el-dialog>
+        <el-pagination @current-change="handleCurrentChange" :current-page.sync="pagination.currPage"
+                       :page-size="pagination.pageSize" layout="total,prev,pager,next,jumper" :total="pagination.totalPage"></el-pagination>
     </el-card>
 
 </div>
@@ -145,26 +141,37 @@
 <script>
     var post = require('/mods/backend');
     var dateFormat = require('dateformat');
+    var catchData=require('/mods/pagination').getData;
 
     function getData(app) {
-        post('/depot/get_apply', {
-            pageNum: 1, pageSize: 99999
-        }, (data, err) => {
-            app.states.initializing = false;
-
-            if (err) {
-                app.$message.error(err.msg);
-                return;
+        catchData({
+            url:'/depot/get_apply',
+            app:app,
+            refresh:[],
+            pageNum:app.pagination.currPage,
+            pageSize:6,
+            searchKey:{},
+            itemName:'schedules',
+            total:(totalNum)=>{
+                if(totalNum!==0){
+                    app.states.dataReady=true;
+                }
+                app.pagination.totalPage=totalNum;
             }
-
-            app.items = data.schedules;
-            app.states.dataReady = true;
-        })
+        },(allPages,data)=>{
+            app.items=data;
+            app.states.initializing=false;
+        });
     }
 
     var app = new Vue({
         el: '#app',
         data: {
+            pagination:{
+                totalPage:0,
+                currPage:1,
+                pageSize:6
+            },
             selection:{
                 applicationNum:'',
                 start_time:'',
@@ -214,6 +221,10 @@
             allowedNum: ''
         },
         methods: {
+            handleCurrentChange(newCurrPage){
+                app.pagination.currPage=newCurrPage;
+                getData(app);
+            },
             showApplySheet: function (row) {
                 this.currRowData.index = row;
                 this.dialogs['applySheet'] = true;
@@ -261,6 +272,8 @@
 
                             app.$message.success("已通过该申请。");
                             this.dialogs['allowNum'] = false;
+                            app.states.dataReady=false;
+                            getData(app);
                         })
                     })
                 });
