--- a/BR-MS/UserAuth.html
+++ b/BR-MS/UserAuth.html
@@ -132,8 +132,9 @@
                 post('/system/get_detail_info', {
                     id: Number(data[i]['id'])
                 }, (data2) => {
-                    console.log(data2);
-                    items.push({...data, ...data2});
+                    var obj1={};
+                    Object.assign(obj1,data,data2);
+                    items.push(obj1);
                 })
             }
         });
